tests/NormalTests/paczka2/big_fuzzy/61765054.err
Error in line 3: 5Xi2HD A860 67,9
Error in line 4: HZwh9RSkJZ A855 45,5
Error in line 6: HZwh9RSkJZ A860 67,2
Error in line 16: 0NtfG A860 39,5
Error in line 24: HZwh9RSkJZ A191 -1,6
Error in line 26: 0NtfG A191 99,60
Error in line 21: lwPhiLjjjM A191 348,3
Error in line 34: A191 A855 77,24
Error in line 33: 0NtfG A855 50,3
Error in line 46: A191 A191 2p,p
Error in line 51: BmEdDdAl A191 426,6
Error in line 31: lwPhiLjjjM A855 47,9
Error in line 50: vLJTN5wiaAU A855 69,8
Error in line 70: HZwh9RSkJZ A855 5,63
Error in line 65: vLJTN5wiaAU S674 17,5
Error in line 22: HZwh9RSkJZ A191 36,7
Error in line 78: HZwh9RSkJZ A855 76,6
Error in line 92: A191 S674 31,7
Error in line 94: 0NtfG A855 44,9
Error in line 98: 0NtfG A860 -1,9
Error in line 101: 5Xi2HD A860 28,19
Error in line 93: 5Xi2HD A860 14,1
Error in line 96: 0NtfG A860 8,3
Error in line 128: 0NtfG A860 36,1
Error in line 115: A191 A860 89,8
Error in line 132: 0NtfG A191 39,1
Error in line 138: BmEdDdAl A855 81,2
Error in line 137: 0NtfG S674 90,1
Error in line 144: lwPhiLjjjM S674 89,8
Error in line 148: lwPhiLjjjM A855 30,1
Error in line 146: 0NtfG S674 88,5
Error in line 150: lwPhiLjjjM A191 54,7
Error in line 160: vLJTN5wiaAU S674 39,5
Error in line 180: vLJTN5wiaAU S674 45,1
Error in line 173: BmEdDdAl A855 35,9
Error in line 191: lwPhiLjjjM A860 26,2
Error in line 193: lwPhiLjjjM A191 53,0
Error in line 190: A191 S674 21,7
Error in line 202: 5Xi2HD A855 241,97
Error in line 197: 5Xi2HD A855 54,2
Error in line 188: HZwh9RSkJZ S674 5,4
Error in line 206: 0NtfG S674 31,8
Error in line 213: lwPhiLjjjM S674 91,9
Error in line 218: lwPhiLjjjM A191 77,8
Error in line 221: 5Xi2HD S674 191,8
Error in line 220: lwPhiLjjjM A860 93,4
Error in line 223: 5Xi2HD A860 5,8
Error in line 238: 0NtfG A860 79,6
Error in line 240: lwPhiLjjjM S674 59,9
